fix sizing and alignment for resume page

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ body {
   align-items: center;
   background-color: rgb(60, 59, 59);
   color: white;
+  font-family: 'Montserrat', sans-serif;
   /* margin: 100px 100px 25px 100px; */
 }
 
