--- a/src/pages/Resume/Resume.module.css
+++ b/src/pages/Resume/Resume.module.css
@@ -1,15 +1,36 @@
-.resume h4 {
-  padding: 0% 0 8% 0;
+.resume h1 {
+  padding: 0% 0 4% 0;
+}
+
+.resume section {
+  padding: 0 0 0 10%;
 }
 
 .resume div {
+  width: 5%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 50%;
+  justify-content: flex-start;
+  width: 40%;
+  padding: 0% 0 2% 0;
 }
 
 .resume p {
-  font-size: 3em;
+  font-size: 2.25em;
+  color: white;
+  padding: 0 5% 0 0;
+}
+
+.resume ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 40%;
+  padding: 0;
+}
+
+.resume li {
+  font-size: 2.5em;
   color: gray;
+  padding: 0 3%;
 }
